initial get all tasks on frontend

--- a/public/index.html
+++ b/public/index.html
@@ -61,11 +61,10 @@
           <li class="nav-item"><button id="tasksUncompl" class="nav-link">Uncompleted</button></li>
         </ul>
         
-        <div class="task-list">
-        </div>
+        <div class="task-list"> </div>
       </div>
     </div>
   </div>
-  <script src="script.js" defer async></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
