--- a/public/index.html
+++ b/public/index.html
@@ -55,10 +55,11 @@
       <div class="col-md-7">
         <ul class="nav nav-tabs mb-3">
           <li class="nav-item"><button id="allTasks" class="nav-link active">All</button></li>
+          <li class="nav-item"><button id="tasksUncompl" class="nav-link">Uncompleted</button></li>
           <li class="nav-item"><button id="tasksToday" class="nav-link">Today</button></li>
           <li class="nav-item"><button id="tasksTommorow" class="nav-link">Upcoming</button></li>
           <li class="nav-item"><button id="tasksBefore" class="nav-link">Expired</button></li>
-          <li class="nav-item"><button id="tasksUncompl" class="nav-link">Uncompleted</button></li>
+          <li class="nav-item"><button id="taskCompleted" class="nav-link">Completed</button></li>
         </ul>
         
         <div class="task-list"> </div>
