initial telegram id env file

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,10 @@
             
             <div class="mb-3">
               <label for="telegramChatId" class="form-label">Telegram Chat ID</label>
-              <input type="text" id="telegramChatId" class="input-field"  required />
+              <!-- <input type="text" id="telegramChatId" class="input-field"  required /><br> -->
+              <select id="telegramChatIdInput" class="form-select" required>
+                <option value="">------------</option>
+              </select>
             </div>
             
             <div class="form-check mb-3">
